--- a/src/Enza_DEG_analysis.Rmd
+++ b/src/Enza_DEG_analysis.Rmd
@@ -15,38 +15,45 @@ library(rstatix)
 ```{r}
 
 bmet <- readRDS(file = "/Users/ds/Desktop/scRNA_datasets/He_scRNA/He_mCRPC.rds")
-tumor <- subset(bmet, idents = "tumor")
+Idents(bmet) <- "supercluster.for.LDSC.SEG"
 
-sc_deg <- FindMarkers(object =  tumor[row.names(tumor) %in% linc$gene.name,], group.by = "prior.enzalutamide",only.pos = F, ident.1 = "True", verbose = T)
+tumor <- subset(bmet,supercluster.for.LDSC.SEG=='tumor' )
 
-sc_deg %>% arrange(-avg_log2FC) %>% mutate(Gene = row.names(.))  %>% dplyr::filter(p_val_adj < 0.1 & abs(avg_log2FC) > 1) 
+
+tumor@meta.data
+
+bmet@meta.data
+sc_deg <- FindMarkers(object =  bmet[row.names(bmet) %in% linc$gene.name,], group.by = "prior.enzalutamide",only.pos = F, ident.1 = "True", verbose = T)
+
+
+
+sc_deg
 
 up <- sc_deg %>% arrange(-avg_log2FC)  %>% mutate(Genes = row.names(.))  %>% dplyr::filter(p_val_adj < 0.1 & avg_log2FC > 1) %>%  left_join( y = final_markers, by = c("Genes" = "gene"))%>% arrange(-avg_log2FC.x)
+down <- sc_deg %>% arrange(-avg_log2FC)  %>% mutate(Genes = row.names(.))  %>% dplyr::filter(p_val_adj < 0.1 & avg_log2FC < -1) %>%  left_join( y = final_markers, by = c("Genes" = "gene"))%>% arrange(-avg_log2FC.x)
+
+up
 
 
-down <- sc_deg %>% arrange(-avg_log2FC)  %>% mutate(Genes = row.names(.)) %>% dplyr::filter(p_val_adj < 0.1 & avg_log2FC < -1) %>%  left_join( y = final_markers, by = c("Genes" = "gene")) %>% arrange(avg_log2FC.x)
-
-down
-
-up 
-
-#%>% ggplot(aes(x = cluster)) + geom_bar()
-
-DotPlot(object = bmet, features = "LINC01278", group.by = "supercluster.for.LDSC.SEG")
-
-
-View(markers)
 ```
 
 ```{r}
 
 
-plot <-  EnhancedVolcano(toptable = sc_deg, x = "avg_log2FC", y = "p_val_adj", lab =row.names(sc_deg), selectLab = c( up$Genes[1:10], down$Genes[1:10]), pointSize = 1 , max.overlaps	= Inf, drawConnectors = T, pCutoff = 1e-01, legendPosition = "none", title = "Differential expression analysis of lncRNAs and Enzalutamide resistance", subtitle = "Enza resistant v.s naive mCRPCs", FCcutoff = 1, labSize = 3)
+
+plot
 ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot, width = 10)
 
 
+sc_deg <- sc_deg %>% mutate(Genes = row.names(.)) %>% left_join( y = final_markers, by = c("Genes" = "gene")) %>% mutate(Cluster = ifelse(is.na(cluster), "Unknown", cluster))
+sc_deg <- sc_deg %>% mutate(Alpha = ifelse(Cluster == "Unknown", 0.1, 1))
 
 
+sc_deg %>% arrange(-avg_log2FC.x)
+
+plot <- ggplot(sc_deg, aes(x = avg_log2FC.x, y = -log10(p_val_adj.x), label = Genes) ) + geom_point(data = dplyr::filter(sc_deg, abs(avg_log2FC.x) > 1 & p_val_adj.x < 0.1), aes(color = Cluster)) + scale_color_manual(values = c("purple", "orange", "red", "black", "darkgreen", "navy", "grey")) + geom_hline(yintercept = -log10(0.1), linetype= 'dashed') + geom_vline(xintercept = c(-1,1), linetype = 'dashed') + geom_text_repel(data = dplyr::filter(sc_deg, abs(avg_log2FC.x) > 1 & p_val_adj.x < 0.1 ), force = 0.8) + xlab("avg_log2FC") + ylab("-log10(p_val_adj)") + ggtitle("lncRNAs associated with Enza treatment")
+                                
+plot
 ```
 
 
@@ -55,36 +62,156 @@ ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot, width = 10)
 all_gene_sets = msigdbr(species = "Homo sapiens")
 
 gs <- all_gene_sets %>% dplyr::filter(gs_cat == "H")
-
-querygenes <- list(TGFB = gs[grepl(pattern = "TGF", x = gs$gs_name),"gene_symbol", drop = T])
 ```
 
 
 ```{r}
-a <- tumor[c(dplyr::filter(up, cluster == 'tumor')$Genes),] %>% GetAssayData() %>% colMeans()
-b <- tumor[querygenes$TGFB,] %>% GetAssayData() %>% colMeans()
-df <- data.frame(lncRNA = a, TGFB = b, Enza = tumor$prior.enzalutamide)
+
+pathways <- gs$gs_name %>% unique()
+
+querygenes
+
+res <- do.call(rbind, lapply(pathways, FUN = function(p){
+  
+  print(p)
+  a <- bmet[c(up$Genes),] %>% GetAssayData() %>% colMeans()
+  b <- bmet[c(down$Genes),] %>% GetAssayData() %>% colMeans()
+  g <- gs %>% dplyr::filter(gs_name == p) %>% .$gene_symbol
+  c <- bmet[g,] %>% GetAssayData() %>% colMeans()
+  
+  df <- data.frame(Pathway = p, PCC.up = cor.test(a,c)$estimate, Pval.up = cor.test(a,c)$p.value, PCC.down = cor.test(b,c)$estimate, Pval.down = cor.test(b,c)$p.value)
+  return(df)
+}))
 
 
-p1 <- df %>% ggplot( aes( x= lncRNA, y = TGFB)) + geom_point(aes(color  = Enza)) + geom_smooth(method = "lm", color  = "black") + stat_cor() + scale_color_viridis_d(end = 0.6, option = "cividis") + xlab("Enza resistant lncRNAs") + ylab("MSigDB TGFB pathway")
+res
+
+res.up <- arrange(res, -PCC.up)[1:5,c("Pathway", "PCC.up")]
+colnames(res.up) <- c("Pathway", "PCC")
+
+res.down <- arrange(res, -PCC.down)[1:5,c("Pathway", "PCC.down")]
+colnames(res.down) <- c("Pathway", "PCC")
+
+p <- rbind(res.up, mutate(res.down, PCC = PCC * -1)) %>% mutate(Group = ifelse(PCC > 0, "Upregulated", "Downregulated")) %>% ggplot(aes(y = reorder(Pathway, PCC), x = PCC, fill = Group)) + geom_col() + xlim(c(-1,1)) + scale_x_continuous(breaks = seq(-1,1,0.1),labels = seq(-1,1,0.1) %>% abs()) + ylab("Pathway") + scale_fill_manual(values = c("navy", "darkred"))
+
+ggsave(filename = "/Users/ds/Desktop/plot.pdf", width = 10, plot = p)
+```
 
 
+```{r}
 
-stat.test <- df %>% wilcox_test(formula = TGFB ~ Enza) %>% add_significance()
-p2 <- ggboxplot(df, x = "Enza", y = "TGFB", fill = viridis::cividis(10)[5], xlab = "Enzalutamide resistance")
-stat.test <- stat.test %>% add_xy_position(x = "Enza")
-p2 <- p2 + 
-  stat_pvalue_manual(stat.test, label = "p") +
-  scale_y_continuous(expand = expansion(mult = c(0.05, 0.1)))
+query <- mcrpc_rna[, colnames(mcrpc_rna) %in% dplyr::filter(gs, gs_name == "HALLMARK_COMPLEMENT")$gene_symbol, drop = F] %>% rowMeans()      
+
+df <-  mcrpc_rna[,colnames(mcrpc_rna) %in% up$Genes, drop = F] 
+#df <- df[,colMeans(df) >0]
+p1 <- data.frame(GEX = rowMeans(df), GS = query) %>% ggplot(aes(x = GEX, y = GS)) + geom_point() + geom_smooth(method = 'lm') + stat_cor() + theme_classic() + ylab("HALLMARK_COMPLEMENT") + xlab("Enza lncRNA Upregulated")
+
+
+query <- mcrpc_rna[, colnames(mcrpc_rna) %in% dplyr::filter(gs, gs_name == "HALLMARK_ANDROGEN_RESPONSE")$gene_symbol, drop = F] %>% rowMeans()      
+
+df <-  mcrpc_rna[,colnames(mcrpc_rna) %in% down$Genes, drop = F] 
+df
+
+df <- df[,colMeans(df) >0]
+p2 <- data.frame(GEX = rowMeans(df), GS = query) %>% ggplot(aes(x = GEX, y = GS)) + geom_point() + geom_smooth(method = 'lm') + stat_cor()  + theme_classic() + ylab("HALLMARK_ANDROGEN_RESPONSE") + xlab("Enza lncRNA Downregulated")
+
+pdf("/Users/ds/Desktop/plot.pdf", width = 10)
+p1 + p2
+dev.off()
+
+```
+
+
+```{r}
+lcm <- read_csv(file = "/Users/ds/Desktop/projects/data/rna/LCM_enza_WCDT_TPM.csv", col_names = T)
+colnames(lcm)[1] <- "Gene"
+
+meta <- read_csv(file = "/Users/ds/Desktop/projects/data/anno/LCM_enza_WCDT_meta.csv", col_names = c("Patient.ID", "Timepoint", "Biopsy.site", "Same.lesion", "PSA", "TOS", "AR.VIPER", "AR.GEX", "Aggarwal", "Labrecque" ))
+
+meta
+
+```
+
+
+```{r}
+querygenes <- list(Andr = gs[grepl(pattern = "ANDROGEN", x = gs$gs_name),"gene_symbol", drop = T], Inflamm = gs[grepl(pattern = "INFLAMMATORY", x = gs$gs_name),"gene_symbol", drop = T])
+
+a <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(up$Genes)) %>% dplyr::select(-Gene) %>% log1p() %>% colMeans()
+b <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(down$Genes)) %>% dplyr::select(-Gene) %>% log1p() %>% colMeans()
+c <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(querygenes$Andr)) %>% dplyr::select(-Gene) %>% log1p() %>% colMeans()
+d <- data.frame(lcm) %>% dplyr::filter(Gene %in% c(querygenes$Inflamm)) %>% dplyr::select(-Gene) %>% log1p() %>% colMeans()
+
+df <- data.frame(Patient.ID = names(a), Enza_up = a, Enza_down = b, Andr = c, Inflamm = d) %>% merge(meta)
+
+row.names(df) <- df$Patient.ID
+df$AR.GEX <- as.numeric(df$AR.GEX)
+df$AR.VIPER <- as.numeric(df$AR.VIPER)
+
+
+column_ha = HeatmapAnnotation( PSA = df$PSA, AR.GEX = df$AR.GEX, AR.VIPER = df$AR.VIPER, Aggarwal.cluster = df$Aggarwal, Labrecque.cluster = df$Labrecque)
+df
+mat <- dplyr::select(df, c(Enza_up, Enza_down)) %>% scale() %>% t()
+mat <- ramify::clip(mat, .min = -2, .max = 2)
+
+pdf("/Users/ds/Desktop/plot.pdf", height = 5, width = 10)
+Heatmap(matrix = mat, show_column_names = T, col  = colorRampPalette(c('navy',"white", "red"))(10), top_annotation = column_ha, cluster_columns = F, name = "Z score", column_names_gp = gpar(fontsize = 5), height = unit(2, 'cm'))
+dev.off()
+```
+
+```{r}
+
+stat.test <- dplyr::filter(df, PSA != "Unknown") %>%
+  group_by(PSA) %>%
+  t_test(Enza_down ~ Timepoint, paired = T) %>%
+  adjust_pvalue(method = "BH") %>%
+  add_significance()
+
+# Create a box plot
+p1 <- ggboxplot(
+  dplyr::filter(df, PSA != "Unknown"), x = "Timepoint", y = "Enza_down", fill = "darkred", alpha = 0.5,
+  facet.by = "PSA"
+  )
+
+# Make facet and add p-values
+stat.test <- stat.test %>% add_xy_position(x = "Timepoint")
+p1 <- p1 + stat_pvalue_manual(stat.test, label = 'p.adj')
+
+stat.test
+p1
+
+stat.test <- dplyr::filter(df, PSA != "Unknown") %>%
+  group_by(PSA) %>%
+  t_test(Enza_up ~ Timepoint, paired = T) %>%
+  adjust_pvalue(method = "BH") %>%
+  add_significance()
+
+# Create a box plot
+p2 <- ggboxplot(
+  dplyr::filter(df, PSA != "Unknown"), x = "Timepoint", y = "Enza_up", fill = "navy", alpha = 0.5,
+  facet.by = "PSA"
+  )
+
+# Make facet and add p-values
+stat.test <- stat.test %>% add_xy_position(x = "Timepoint")
+p2 <- p2 + stat_pvalue_manual(stat.test, label = 'p.adj')
+
+plot <- p1 + p2
+plot
+```
+
+
+```{r}
+
+
+p1 <- ggplot(df, aes(x = Enza_down, y = Andr)) + geom_point(aes(shape = Timepoint, color = PSA)) + geom_smooth(method = "lm", color = 'black') + stat_cor() + scale_color_manual(values = c("blue", "darkred", "black")) + ylab("Enza_down lncRNA siganture") + xlab("Hallmark Androgen Response pathway") 
+p2 <- ggplot(df, aes(x = Enza_up, y = Inflamm)) + geom_point(aes(shape = Timepoint, color = PSA)) + geom_smooth(method = "lm", color = 'black') + stat_cor() + scale_color_manual(values = c("blue", "darkred", 'black')) + ylab("Enza_up lncRNA siganture") + xlab("Hallmark Inflammatory Response pathway") 
+
 
 plot <- p1 + p2
 
-
 plot
-ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot, width = 15)
 
 
-down
-up
+
 ```
 
